# game

./: CMakeLists.txt
pch/: vulkan.hpp
src/: logger.cpp  logger.hpp  main.cpp  renderer.cpp  renderer.hpp  types.hpp  window.cpp  window.hpp
src/components/: transform.hpp
src/math/: vec.hpp
src/mesh/: gpu_mesh.cpp  gpu_mesh.hpp
src/platform/opengl/: opengl_renderer.cpp  opengl_renderer.hpp
src/platform/vulkan/: vulkan_renderer.cpp  vulkan_renderer.hpp
